fixed footer__p from overflowing

--- a/main.css
+++ b/main.css
@@ -538,7 +538,7 @@
   .footer {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     justify-content: center;
     height: 467px;
     margin-top: 150px;
